/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @emails oncall+react_native
 */

'use strict';

import * as React from 'react';
import ReactTestRenderer from 'react-test-renderer';
import TouchableNativeFeedback from '../TouchableNativeFeedback';
import View from '../../View/View';

describe('<TouchableNativeFeedback />', () => {
  it('should render as expected', () => {
    const instance = ReactTestRenderer.create(
      <TouchableNativeFeedback>
        <View />
      </TouchableNativeFeedback>,
    );

    expect(instance.toJSON()).toMatchSnapshot();
  });
});

describe('<TouchableNativeFeedback disabled={true}>', () => {
  it('should be disabled when disabled is true', () => {
    expect(
      ReactTestRenderer.create(
        <TouchableNativeFeedback disabled={true}>
          <View />
        </TouchableNativeFeedback>,
      ),
    ).toMatchSnapshot();
  });
});

describe('<TouchableNativeFeedback disabled={true} accessibilityState={{}}>', () => {
  it('should be disabled when disabled is true and accessibilityState is empty', () => {
    expect(
      ReactTestRenderer.create(
        <TouchableNativeFeedback disabled={true} accessibilityState={{}}>
          <View />
        </TouchableNativeFeedback>,
      ),
    ).toMatchSnapshot();
  });
});

describe('<TouchableNativeFeedback disabled={true} accessibilityState={{checked: true}}>', () => {
  it('should keep accessibilityState when disabled is true', () => {
    expect(
      ReactTestRenderer.create(
        <TouchableNativeFeedback
          disabled={true}
          accessibilityState={{checked: true}}>
          <View />
        </TouchableNativeFeedback>,
      ),
    ).toMatchSnapshot();
  });
});

describe('<TouchableNativeFeedback disabled={true} accessibilityState={{disabled:false}}>', () => {
  it('should overwrite accessibilityState with value of disabled prop', () => {
    expect(
      ReactTestRenderer.create(
        <TouchableNativeFeedback
          disabled={true}
          accessibilityState={{disabled: false}}>
          <View />
        </TouchableNativeFeedback>,
      ),
    ).toMatchSnapshot();
  });
});

describe('<TouchableNativeFeedback disabled={false} accessibilityState={{disabled:true}}>', () => {
  it('should overwrite accessibilityState with value of disabled prop', () => {
    expect(
      ReactTestRenderer.create(
        <TouchableNativeFeedback
          disabled={false}
          accessibilityState={{disabled: true}}>
          <View />
        </TouchableNativeFeedback>,
      ),
    ).toMatchSnapshot();
  });
});
